# progetto_api_2023

./: .gitignore  CMakeLists.txt  README.md  exe  globals.h  library.h  list_manager.h  open_1.txt  out.txt  progetto  progetto.c  program_output  prototype.h  prova.json  test_multiple_open.py  type.h  view.h
artifact/: API23  exe
artifact/API23.dSYM/Contents/: Info.plist
artifact/API23.dSYM/Contents/Resources/DWARF/: API23
artifact/exe.dSYM/Contents/Resources/DWARF/: exe
debugger_file/: callgrind.out.45246  callgrind.out.67320  fileOutCallgrind  fileOutCallgrind2  fileOutCallgrind3  fileOutCallgrind4  fileOutCallgrind49  fileOutCallgrind5  massif.out.45301  massif.out.64386  massif.out.65561
progetto.dSYM/Contents/Resources/DWARF/: progetto
src/: 10706056.c  dijkstra.h  globals.h  library.h  list_manager.h  progetto.c  prototype.h  type.h  view.h
